prevent overlapping

--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -98,14 +98,14 @@
 .product-name {
   height: 80px;
   margin-bottom: 5px;
-  padding-bottom: 15px;
+  padding-bottom: 45px;
   font-weight: bold;  
   
 }
 .product-desc {
   height: 120px;
   margin-bottom: 5px;
-  padding-bottom: 100px;
+  padding-bottom: 140px;
 }
 
 .product-rating-container {
